Internal Renderer Not Respond and Bad Raytrace Performance #36541

Closed
opened 2013-08-22 20:10:51 +02:00 by Hikmet Koyuncu · 11 comments

%%%--- Operating System, Graphics card ---
Windows 7 64-bit, Intel HD3000

- Blender version with error, and version that worked ---

2.62 to 2.68a

- Short description of error ---

When render, mostly second or third render, render not respond, sometimes not respond 4-5 minutes, sometimes forever. This occur mostly when disable texture, or change material settings etc. And raytrace performance is very bad. In 2.61 not problem and raytrace performance is good.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See attached file...

%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit, Intel HD3000 - Blender version with error, and version that worked --- 2.62 to 2.68a - Short description of error --- When render, mostly second or third render, render not respond, sometimes not respond 4-5 minutes, sometimes forever. This occur mostly when disable texture, or change material settings etc. And raytrace performance is very bad. In 2.61 not problem and raytrace performance is good. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See attached file... %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It's the fix for this bug that is causing the long render time:
https://projects.blender.org/tracker/index.php?func=detail&aid=29723

This fixed wrong refraction in some cases, and the new version should render more correct results, but at the same time it needs many more rays. Setting depth to 21 is problematic for Blender Internal, it can result in up to 2^21 = 2 million rays per pixel if surfaces have both refraction and mirror reflection and the ray fails to exit the object due to total internal reflection.

I think the only good way to support depth that high is monte carlo path tracing: random picking between reflection/refraction, and random path termination. That goes beyond what counts as a bug though, it would be a new feature. All I can suggest at the moment is to lower the depth here.%%%

%%%It's the fix for this bug that is causing the long render time: https://projects.blender.org/tracker/index.php?func=detail&aid=29723 This fixed wrong refraction in some cases, and the new version should render more correct results, but at the same time it needs many more rays. Setting depth to 21 is problematic for Blender Internal, it can result in up to 2^21 = 2 million rays per pixel if surfaces have both refraction and mirror reflection and the ray fails to exit the object due to total internal reflection. I think the only good way to support depth that high is monte carlo path tracing: random picking between reflection/refraction, and random path termination. That goes beyond what counts as a bug though, it would be a new feature. All I can suggest at the moment is to lower the depth here.%%%
Author

%%%Thanks for reply. I tried r59453M, and not use raytrace material, but same problem occurs.

Example in r59453M version:

  • I disable all Raytrace options: Shadow, Mirror, AO etc.

  • I disable Compositing.

  • Clear all materials on "Diamond" and "Plane".

  • Hit F12 for Render, but program still not response.

When this response problem fix, then I'll try lower depth values.
%%%

%%%Thanks for reply. I tried r59453M, and not use raytrace material, but same problem occurs. Example in r59453M version: * I disable all Raytrace options: Shadow, Mirror, AO etc. * I disable Compositing. * Clear all materials on "Diamond" and "Plane". * Hit F12 for Render, but program still not response. When this response problem fix, then I'll try lower depth values. %%%

%%%I suspect what you're seeing is that the preview render is stuck, for the diamond the texture preview render is set to show the material, and so it will actually try to render with this depth before you disable it.

Anyway, cancelling the final and preview render should be possible even if it is this slow, that I can fix.%%%

%%%I suspect what you're seeing is that the preview render is stuck, for the diamond the texture preview render is set to show the material, and so it will actually try to render with this depth before you disable it. Anyway, cancelling the final and preview render should be possible even if it is this slow, that I can fix.%%%

%%%Fix for that now in revision 59472, the preview render should no longer cause Blender to hang, and the final render can be cancelled as well now.%%%

%%%Fix for that now in revision 59472, the preview render should no longer cause Blender to hang, and the final render can be cancelled as well now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for fix.

I tried r59489M revision and render respond problem fixed.

And try same scene for "Depth = 10". Render Time = "00:49.57"

Try same scene for "Depth = 21" in Blender 2.61. Render Time = "00:13.96"

And Raytrace quality in 2.68 good as 2.61, but slow.

I hope Blender's new versions would increase raytrace performance.
%%%

%%%Thanks for fix. I tried r59489M revision and render respond problem fixed. And try same scene for "Depth = 10". Render Time = "00:49.57" Try same scene for "Depth = 21" in Blender 2.61. Render Time = "00:13.96" And Raytrace quality in 2.68 good as 2.61, but slow. I hope Blender's new versions would increase raytrace performance. %%%

%%%Right, but that's no a valid comparison, the resulting render is different.

In 2.61 most rays would exit the object after only a few bounces so you weren't actually getting depth 21.%%%

%%%Right, but that's no a valid comparison, the resulting render is different. In 2.61 most rays would exit the object after only a few bounces so you weren't actually getting depth 21.%%%
Author

%%%Yes, 2.68 result is good as 2.61.

What is guide for select true depth value in 2.68? There is not tutorial site, i know, but I wonder it? Any formula? (please won't be complex :)) Or any tip?%%%

%%%Yes, 2.68 result is good as 2.61. What is guide for select true depth value in 2.68? There is not tutorial site, i know, but I wonder it? Any formula? (please won't be complex :)) Or any tip?%%%

%%%Higher depth gives more accurate results, in reality the depth would be infinite. It depends on what you want to render, you can set it as low as you can while you're still happy with the way it looks.%%%

%%%Higher depth gives more accurate results, in reality the depth would be infinite. It depends on what you want to render, you can set it as low as you can while you're still happy with the way it looks.%%%
Author

%%%Thanks.%%%

%%%Thanks.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36541
No description provided.