Fix #36541: blender internal raytrace render hangs with high ray depth. The code here is not efficient for such cases, a ray depth can give up to 2^depth rays due to the ray splitting in two at each depth. A proper solution requires a better algorithm, for now I've ensured that you can at least cancel such renders. The overhead from the extra test_break is negligible.